# eyes_piper

./: README.MD  README.md  plot.py  requirements.txt  ros_detect.py  shell_process.md
dataset_workflow/: resize_pics.py  segment_label.py  synthesize_images.py  test_data.py  train_val.py
dataset_workflow/backgrounds/: README.md
dataset_workflow/captured/: README.md
piper_ros/: .gitignore  README(EN).md  README.MD  frames.gv
piper_ros/src/easy_handeye/easy_handeye/launch/: piper_eye_in_hand_calibration.launch
piper_ros/src/piper_moveit/moveit_ctrl/: CMakeLists.txt  package.xml
piper_ros/src/piper_moveit/moveit_ctrl/scripts/: build_and_save_traj.py  joint_moveit_ctrl_server.py  mature_follower.py  pick_one.py  pick_one_bpt.py  pick_one_traj.py  play_saved_traj.py  record_joint_states.py
piper_ros/src/ros_astra_camera/: CMakeLists.txt  package.xml
piper_ros/src/ros_astra_camera/launch/: cam_func.launch  dabai.launch
piper_ros/src/ros_astra_camera/msg/: LabelXYZ.msg
piper_ros/src/ros_astra_camera/scripts/: ros_detect.py
piper_ros/src/ros_astra_camera/srv/: DetectObject.srv
yolo_train/: shell_process.md
yolo_train/dataset_workflow/: synthesize_images.py
