<?xml version="1.0"?>
<package format="2">
  <name>astra_camera</name>
  <version>1.2.7</version>
  <description>Drivers for Orbbec Astra Devices.</description>
  <license>Apache-2.0</license>
  <maintainer email="mocun@orbbec.com">Mo Cun</maintainer>

  <!-- catkin build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 编译时需要的 ROS 包 -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- 运行时需要的 ROS 包 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>


  

  <!-- 其它 ROS 依赖（只在 build or exec 中单向需要的） -->
  <depend>backward_ros</depend>
  <depend>rgbd_launch</depend>

  <!-- 系统库，通过 rosdep 安装 -->
  <export>
    <rosdep>
      <key>libusb-1.0-0-dev</key>
      <key>libudev-dev</key>
      <key>libdw-dev</key>
    </rosdep>

    <!-- 启用 dynamic_reconfigure -->
    <dynamic_reconfigure/>
  </export>
</package>
